--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Founder: Mohammadjuned</p>
+        <p>Founder: Mohammadjuned Halakarni</p>
         <p>© 2025 Urdu Shayari Hub. All rights reserved.</p>
     </footer>
 
